[project]
name = "travel-assistance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno==1.3.1",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.16",
    "aiosignal==1.3.2",
    "altair==5.5.0",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "attrs==25.3.0",
    "blinker==1.9.0",
    "cachetools==5.5.2",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "colorama==0.4.6",
    "dataclasses-json==0.6.7",
    "docstring-parser==0.16",
    "frozenlist==1.5.0",
    "gitdb==4.0.12",
    "gitpython==3.1.44",
    "google-auth==2.39.0",
    "google-genai==1.10.0",
    "greenlet==3.2.0",
    "h11==0.14.0",
    "httpcore==1.0.8",
    "httpx==0.28.1",
    "httpx-sse==0.4.0",
    "idna==3.10",
    "jinja2==3.1.6",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "langchain==0.3.23",
    "langchain-community==0.3.21",
    "langchain-core==0.3.52",
    "langchain-text-splitters==0.3.8",
    "langsmith==0.3.31",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "marshmallow==3.26.1",
    "mdurl==0.1.2",
    "multidict==6.4.3",
    "mypy-extensions==1.0.0",
    "narwhals==1.35.0",
    "numpy==2.2.4",
    "orjson==3.10.16",
    "packaging==24.2",
    "pandas==2.2.3",
    "pillow==11.2.1",
    "propcache==0.3.1",
    "protobuf==5.29.4",
    "pyarrow==19.0.1",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pydantic==2.11.3",
    "pydantic-core==2.33.1",
    "pydantic-settings==2.8.1",
    "pydeck==0.9.1",
    "pygments==2.19.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "python-multipart==0.0.20",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "referencing==0.36.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "requests-toolbelt==1.0.0",
    "rich==14.0.0",
    "rpds-py==0.24.0",
    "rsa==4.9",
    "shellingham==1.5.4",
    "six==1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.40",
    "streamlit==1.44.1",
    "tavily-python==0.5.4",
    "tenacity==9.1.2",
    "tiktoken==0.9.0",
    "toml==0.10.2",
    "tomli==2.2.1",
    "tornado==6.4.2",
    "typer==0.15.2",
    "typing-extensions==4.13.2",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.0",
    "tzdata==2025.2",
    "urllib3==2.4.0",
    "watchdog==6.0.0",
    "websockets==15.0.1",
    "yarl==1.19.0",
    "zstandard==0.23.0",
    "groq==0.22.0",
    "duckduckgo-search==8.0.1",
    "distro==1.9.0",
    "lxml==5.3.2",
    "primp==0.15.0",
    "anthropic>=0.49.0",
    "huggingface-hub>=0.30.2",
]
